# monolith

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  sample.env  sample.ron
migrations/: 20230911174747_initial.up.sql
proto/: auth.proto
src/: app.rs  config.rs  database.rs  grpc.rs  http.rs  lib.rs  main.rs  model.rs  repository.rs  tcp.rs  transport.rs
tests/: e2e.rs  http.ron  tcp.ron
