[package]
name = "monolith"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "uuid"] }
uuid = { version = "1.4.1", features = ["v4"]}
bcrypt = "0.15.0"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.7"
