[package]
name = "monolith"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "uuid"] }
uuid = { version = "1.4.1", features = ["v4"]}
bcrypt = "0.15.0"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.7"
ron = "0.8.1"
serde = {version = "1.0.188", features=["derive"]}
async-trait = "0.1.73"
log = "0.4.20"
env_logger = "0.10.0"
axum = "0.6.20"
reqwest = { version = "0.11.22", features = ["json"] }
tonic = "0.10"
prost = "0.12"

[build-dependencies]
tonic-build = "0.10"
